# johann_web_basic

./: .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS  Dockerfile  LICENSE  Makefile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  uwsgi.ini
johann_web_basic/: __init__.py  main.py
johann_web_basic/scenarios/: __init__.py  forms.py  routes.py
johann_web_basic/scenarios/templates/: launch_scenario.html  scenario_status.html  scenario_status_raw.html  scenarios.html  view_scenario.html
johann_web_basic/templates/: 404.html  500.html  502.html  about.html  base.html
scripts/: check_copyright_headers.py
